add lattice graph

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.core.jar=C:\\Users\\Alberto\\Desktop\\processing-3.5.3-windows64\\processing-3.5.3\\core\\library\\core.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\ainte\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Alberto\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
